jump/03_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiremock-jump-service
  labels:
    app: wiremock-jump
spec:
  selector:
    app: wiremock-jump
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
